# sftrails

./: .gitignore  README.md  pyproject.toml
src/sftrails/: __init__.py  client.py  exceptions.py  models.py  service.py
src/sftrails/api/: __init__.py  dependencies.py  main.py  schemas.py
src/sftrails/api/routes/: health.py  trails.py
tests/: __init__.py  conftest.py  test_api.py  test_client.py  test_exceptions.py  test_models.py  test_service.py
web/: package-lock.json
web/src/app/: layout.tsx  page.tsx
web/src/app/parks/: page.tsx
web/src/app/trails/: page.tsx
web/src/app/trails/[id]/: page.tsx
web/src/components/: ConditionBadge.tsx  StatusBadge.tsx  StatusSummary.tsx  TrailCard.tsx  TrailList.tsx  index.ts
web/src/lib/: api.ts  types.ts
